force-app/main/default/objects/Lead/fields/Active_Main_Street_Communities_Present__c.field-meta.xml
<CustomField>
    <fullName>Active_Main_Street_Communities_Present__c</fullName>
    <label>Active Main Street Communities Present</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>