force-app/main/default/objects/Lead/fields/Board_Advisory_Body_Exists__c.field-meta.xml
<CustomField>
    <fullName>Board_Advisory_Body_Exists__c</fullName>
    <label>Board/Advisory Body Exists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoUnknown</valueSetName>
    </valueSet>
</CustomField>