force-app/main/default/objects/Lead/fields/Coordinating_Program_Budget_Created__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Program_Budget_Created__c</fullName>
    <label>Coordinating Program Budget Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoInProgress</valueSetName>
    </valueSet>
</CustomField>