force-app/main/default/objects/Lead/fields/Core_Services_Identified__c.field-meta.xml
<CustomField>
    <fullName>Core_Services_Identified__c</fullName>
    <label>Core Services Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>