force-app/main/default/objects/Lead/fields/Financial_Management_System_Exists__c.field-meta.xml
<CustomField>
    <fullName>Financial_Management_System_Exists__c</fullName>
    <label>Financial Management System Exists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoUnknown</valueSetName>
    </valueSet>
</CustomField>