force-app/main/default/objects/Lead/fields/Interest_Expressed__c.field-meta.xml
<CustomField>
    <fullName>Interest_Expressed__c</fullName>
    <label>Interest Expressed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNoOption</valueSetName>
    </valueSet>
</CustomField>