force-app/main/default/objects/Lead/fields/Launch_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Launch_Timeline__c</fullName>
    <label>Launch Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>12-18+ Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>