force-app/main/default/objects/Lead/fields/Leadership_Stability__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Stability__c</fullName>
    <label>Leadership Stability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HighRiskModerateLow</valueSetName>
    </valueSet>
</CustomField>