force-app/main/default/objects/Lead/fields/Legal_Entity_Exists__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Exists__c</fullName>
    <label>Legal Entity Exists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoUnknown</valueSetName>
    </valueSet>
</CustomField>