force-app/main/default/objects/Lead/fields/Long_Term_Funding_Plan_Exists__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Funding_Plan_Exists__c</fullName>
    <label>Long Term Funding Plan Exists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoInProgress</valueSetName>
    </valueSet>
</CustomField>