force-app/main/default/objects/Lead/fields/Major_Funding_Sources__c.field-meta.xml
<CustomField>
    <fullName>Major_Funding_Sources__c</fullName>
    <label>Major Funding Sources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>