force-app/main/default/objects/Lead/fields/Mission_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Mission_Alignment__c</fullName>
    <label>Mission Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>