force-app/main/default/objects/Lead/fields/Political_External_Environment__c.field-meta.xml
<CustomField>
    <fullName>Political_External_Environment__c</fullName>
    <label>Political/External Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HighRiskModerateLow</valueSetName>
    </valueSet>
</CustomField>