force-app/main/default/objects/Lead/fields/Relationships_with_Local_Programs__c.field-meta.xml
<CustomField>
    <fullName>Relationships_with_Local_Programs__c</fullName>
    <label>Relationships with Local Programs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>