force-app/main/default/objects/Lead/fields/Seed_Funding_Secured__c.field-meta.xml
<CustomField>
    <fullName>Seed_Funding_Secured__c</fullName>
    <label>Seed Funding Secured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoUnknown</valueSetName>
    </valueSet>
</CustomField>