force-app/main/default/objects/Lead/fields/Self_Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_Completed__c</fullName>
    <label>Self-Assessment Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNoOption</valueSetName>
    </valueSet>
</CustomField>