force-app/main/default/objects/Lead/fields/Staffing_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Capacity__c</fullName>
    <label>Staffing Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>