force-app/main/default/objects/Lead/fields/Strategic_Plan_Developed__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Plan_Developed__c</fullName>
    <label>Strategic Plan Developed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoInProgress</valueSetName>
    </valueSet>
</CustomField>