force-app/main/default/objects/Lead/fields/Understanding_of_Accreditation_Standards__c.field-meta.xml
<CustomField>
    <fullName>Understanding_of_Accreditation_Standards__c</fullName>
    <label>Understanding of Accreditation Standards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>